--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Serverless - Jak żyć bez backendu?</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -218,8 +218,8 @@ plugin uninstall .............. Uninstall and remove a plugin from your service
 					<h2>Pokażę:</h2>
 					<ul>
 						<li>Jak skonfigurować: <a href="https://github.com/kociolekt/cli-alexa-skill/blob/master/NOTES.md">Notatka</a></li>
-						<li>Jak pisać serverless.yml (live code?)</li>
-						<li>Jak developować (live code?)</li>
+						<li>Jak pisać serverless.yml <a href="https://github.com/kociolekt/serverless-presentation/tree/master/example">Przykład Kamilowy</a></li>
+						<li>Jak developować <a href="https://github.com/kociolekt/serverless-presentation/tree/master/example2">Szybki przykład</a></li>
 					</ul>
 					<aside class="notes">
 						Przede wszystkim deploy, logs i invoke. Ale opisać też i inne.
